# mp-assignment-00

./: README.md  pyproject.toml
.github/classroom/: autograding.json
.github/workflows/: autograding.yaml  detect-changes.yaml  monitor-workflows.yaml
questions/: beautiful_permutations.py  coin_piles.py  comparing_strings.py  easy_problem.py  increasing_array.py  long_words.py  longest_repetitions.py  minimum_sorted_subarray.py  missing_number.py  number_spiral.py  trailing_zeros.py  two_knights.py  watermelon.py  weird_algorithm.py
tests/: test_beautiful_permutations.py  test_coin_piles.py  test_comparing_strings  test_comparing_strings.py  test_easy_problem.py  test_increasing_array.py  test_long_words.py  test_longest_repetitions.py  test_minimum_sorted_subarray.py  test_missing_number.py  test_number_spiral.py  test_trailing_zeros.py  test_two_knights.py  test_watermelon.py  test_weird_algorithm.py
