[tool.poetry]
name = "mp-assignment-00"
version = "0.1.0"
description = "First assignment for YSC2229"
authors = ["You Guang <yokurang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
